src/objects/Market_Share_Log__c.object
<CustomObject>
    <fields>
        <fullName>Changed_since_first_reported__c</fullName>
        <description>Checks if the current movement category is different from the original movement category for this current week.</description>
        <formula>IF(TEXT(Current_Movement_Category__c) =  TEXT(Original_Movement_Category__c),
&quot;YES&quot;,
&quot;NO&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks if the current movement category is different from the original movement category for this current week.</inlineHelpText>
        <label>Changed since first reported</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Movement_Category__c</fullName>
        <label>Current Movement Category</label>
        <picklist>
            <picklistValues>
                <fullName>100% TES both years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100% TES to left TES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertised this year but not last</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertised this year but not last-new this week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertised TY only - Lost TES share WoW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increased TES Share</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No advert YTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-TES both years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reduced TES Share</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Start share with others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stopped using TES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Guardian_Volume_TY__c</fullName>
        <label>% Guardian Volume TY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Headbase__c</fullName>
        <label>Headbase</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Movement_Category__c</fullName>
        <label>Original Movement Category</label>
        <picklist>
            <picklistValues>
                <fullName>100% TES both years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100% TES to left TES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertised this year but not last</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertised this year but not last-new this week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertised TY only - Lost TES share WoW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increased TES Share</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No advert YTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-TES both years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reduced TES Share</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Start share with others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stopped using TES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SD_Name__c</fullName>
        <label>SD Name</label>
        <referenceTo>Organisation__c</referenceTo>
        <relationshipLabel>Market Share Logs</relationshipLabel>
        <relationshipName>Market_Share_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>School_Id__c</fullName>
        <externalId>true</externalId>
        <label>School Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TES_Volume_LY__c</fullName>
        <label>% TES Volume LY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TES_Volume_YTD__c</fullName>
        <label>% TES Volume YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TES_Volume_YTD_for_week_added__c</fullName>
        <label>%TES Volume YTD (for week added)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Volumes_YTD__c</fullName>
        <label>Volumes YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week_Added__c</fullName>
        <inlineHelpText>Week the client first changed behaviour.</inlineHelpText>
        <label>Week First Added</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week_of_Report__c</fullName>
        <label>Week of Report</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YOY_ppt_diff__c</fullName>
        <label>YOY (ppt diff)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>eTeach_Volume_TY__c</fullName>
        <label>% eTeach Volume TY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Market Share Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Week_of_Report__c</columns>
        <columns>SD_Name__c</columns>
        <columns>School_Id__c</columns>
        <columns>Current_Movement_Category__c</columns>
        <columns>Volumes_YTD__c</columns>
        <columns>TES_Volume_LY__c</columns>
        <columns>TES_Volume_YTD__c</columns>
        <columns>YOY_ppt_diff__c</columns>
        <columns>eTeach_Volume_TY__c</columns>
        <columns>Guardian_Volume_TY__c</columns>
        <columns>Week_Added__c</columns>
        <columns>Original_Movement_Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MS{0000000000}</displayFormat>
        <label>Market Share Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Market Share Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>